--- a/Introducion/EjercicioRepasoFX/src/main/resources/com/example/ejerciciorepasofx/clientes.fxml
+++ b/Introducion/EjercicioRepasoFX/src/main/resources/com/example/ejerciciorepasofx/clientes.fxml
@@ -11,7 +11,7 @@
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="542.0" style="-fx-background-color: #f0f0f0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="com.example.ejerciciorepasofx.ClientesCtrller">
+fx:controller="com.example.ejerciciorepasofx.Controller.ClientesCtrller">
    <children>
       <Pane layoutX="9.0" layoutY="13.0" prefHeight="378.0" prefWidth="518.0" style="-fx-border-color: #002b60; -fx-border-radius: 2;">
          <children>
