--- a/Tema1_AccesoBDRelacionales/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
+++ b/Tema1_AccesoBDRelacionales/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="388.0" prefWidth="727.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esteladevega_ejercicioformulario.Controller.CubeShopCtrller">
@@ -48,7 +49,7 @@
         </Button>
           <Pane layoutX="60.0" layoutY="68.0" prefHeight="282.0" prefWidth="619.0" style="-fx-background-color: #8656cb; -fx-background-radius: 24; -fx-border-color: black; -fx-border-radius: 24;" stylesheets="@Style.css">
               <children>
-                  <Button fx:id="newProductBtt" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onNewProductAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="New Product">
+                  <Button fx:id="newProductBtt" layoutX="69.0" layoutY="14.0" mnemonicParsing="false" onAction="#onNewProductAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="New Product">
                       <font>
                           <Font size="15.0" />
                       </font>
@@ -79,7 +80,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="yourProductBtt" layoutX="149.0" layoutY="14.0" mnemonicParsing="false" onAction="#onYourProductAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #781ddd; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="Your Products">
+            <Button fx:id="yourProductBtt" layoutX="201.0" layoutY="14.0" mnemonicParsing="false" onAction="#onYourProductAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #781ddd; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="Your Products">
                <font>
                   <Font size="15.0" />
                </font>
@@ -89,6 +90,33 @@
                 <AnchorPane fx:id="anchorPane" minHeight="0.0" minWidth="0.0" prefHeight="188.0" prefWidth="490.0" style="-fx-background-color: #781ddd;" />
               </content>
             </ScrollPane>
+            <Button fx:id="settingBtt" layoutX="8.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSettingAction" prefHeight="42.0" prefWidth="46.0" style="-fx-background-color: #8656cb; -fx-background-radius: 100; -fx-border-color: black; -fx-border-radius: 100;">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagen/threeDots.png" />
+                     </image>
+                     <effect>
+                        <ColorAdjust brightness="-1.0" contrast="-1.0" hue="-1.0" saturation="1.0" />
+                     </effect>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Pane fx:id="settingMenu" layoutX="11.0" layoutY="60.0" prefHeight="120.0" prefWidth="276.0" style="-fx-background-color: #781ddd; -fx-background-radius: 24; -fx-border-color: #000; -fx-border-radius: 24;">
+               <children>
+                  <Button fx:id="closeSeBtt" layoutX="13.0" layoutY="74.0" mnemonicParsing="false" onAction="#onCloseSettingAction" prefHeight="31.0" prefWidth="251.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="CLOSE">
+                     <font>
+                        <Font name="DejaVu Sans Bold" size="17.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="settingsMenuBtt" layoutX="13.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSettingsMenuAction" prefHeight="31.0" prefWidth="251.0" style="-fx-background-color: #8656cb; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="SETTINGS">
+                     <font>
+                        <Font name="DejaVu Sans Bold" size="17.0" />
+                     </font>
+                  </Button>
+                  <Line endX="100.0" layoutX="138.0" layoutY="62.0" startX="-100.0" stroke="#262626" strokeWidth="2.0" />
+               </children>
+            </Pane>
               </children>
           </Pane>
         <ImageView fitHeight="77.0" fitWidth="149.0" layoutX="564.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
