--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/Setting.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/Setting.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="388.0" prefWidth="727.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esteladevega_ejercicioformulario.Controller.SettingCtrller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="388.0" prefWidth="727.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esteladevega_ejercicioformulario.Controller.SettingCtrller">
     <children>
         <ImageView fitHeight="388.0" fitWidth="736.0" layoutX="-6.0" pickOnBounds="true">
             <image>
                 <Image url="@Imagen/blurBackgroundApp.png" />
             </image>
         </ImageView>
-      <Pane fx:id="settingGMenu" layoutX="1.0" prefHeight="388.0" prefWidth="270.0" style="-fx-background-color: #8656cb; -fx-border-color: #000;">
+      <Pane fx:id="settingGMenu" prefHeight="388.0" prefWidth="270.0" style="-fx-background-color: #8656cb; -fx-border-color: #000;">
          <children>
             <Button fx:id="githubBtt" layoutX="50.0" layoutY="321.0" mnemonicParsing="false" onAction="#onGithubAction" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #8656cb; -fx-text-fill: #000;" text="estelaV9" textFill="#201f1f">
                <font>
