--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -113,13 +114,16 @@
                   <Line endX="100.0" layoutX="138.0" layoutY="62.0" startX="-100.0" stroke="#262626" strokeWidth="2.0" />
                </children>
             </Pane>
-            <TableView fx:id="CubeTable" layoutX="83.0" layoutY="82.0" prefHeight="164.0" prefWidth="427.0">
+            <TableView fx:id="CubeTable" layoutX="83.0" layoutY="82.0" prefHeight="164.0" prefWidth="413.0">
               <columns>
                 <TableColumn fx:id="nameProductCol" prefWidth="141.5999755859375" text="Name of Product" />
                 <TableColumn fx:id="categoryCol" prefWidth="104.79998779296875" text="Category" />
                   <TableColumn fx:id="priceCol" minWidth="5.5999755859375" prefWidth="67.20001220703125" text="Price" />
                   <TableColumn fx:id="ownerCol" prefWidth="111.80001831054688" text="Owner" />
               </columns>
+               <effect>
+                  <DropShadow />
+               </effect>
             </TableView>
               </children>
           </Pane>
