--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/MyProduct.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/MyProduct.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -51,7 +53,7 @@
         </Button>
         <Pane layoutX="60.0" layoutY="68.0" prefHeight="282.0" prefWidth="619.0" style="-fx-background-color: #8656cb; -fx-background-radius: 24; -fx-border-color: black; -fx-border-radius: 24;" stylesheets="@Style.css">
             <children>
-                <Button fx:id="modifyBtt" layoutX="69.0" layoutY="14.0" mnemonicParsing="false" onAction="#onModifyAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="Modify">
+                <Button fx:id="modifyBtt" layoutX="69.0" layoutY="14.0" mnemonicParsing="false" onAction="#onModifyAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="MODIFY">
                     <font>
                         <Font size="15.0" />
                     </font>
@@ -117,5 +119,66 @@
                 <Image url="@Imagen/whiteStripesOthre.png" />
             </image>
         </ImageView>
+      <Pane fx:id="modifyPane" layoutX="204.0" layoutY="68.0" prefHeight="282.0" prefWidth="333.0" style="-fx-background-color: #8656cb; -fx-background-radius: 24; -fx-border-color: black; -fx-border-radius: 24;" stylesheets="@Style.css">
+         <children>
+            <Button fx:id="modifyProductPaneBtt" layoutX="13.0" layoutY="227.0" mnemonicParsing="false" onAction="#onModifyProductAction" prefHeight="42.0" prefWidth="149.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="MODIFY">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Label fx:id="loginMessage1" layoutX="21.0" layoutY="136.0" textFill="#a82f2a">
+               <font>
+                  <Font name="DejaVu Sans Bold Oblique" size="13.0" />
+               </font>
+            </Label>
+            <Button layoutY="69.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="50.0" prefWidth="35.0" style="-fx-background-color: #781ddd; -fx-border-color: #000;" text="Button" />
+            <ImageView fitHeight="42.0" fitWidth="67.0" layoutX="-18.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" style="-fx-rotate: -17;">
+               <image>
+                  <Image url="@Imagen/cube.png" />
+               </image>
+            </ImageView>
+            <Button layoutX="298.0" layoutY="156.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="35.0" style="-fx-background-color: #781ddd; -fx-border-color: #000;" />
+            <ImageView fitHeight="42.0" fitWidth="46.0" layoutX="304.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true" style="-fx-rotate: 17;">
+               <image>
+                  <Image url="@Imagen/cube.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="ExitMenuBtt" layoutX="8.0" layoutY="14.0" mnemonicParsing="false" onAction="#onExitMenuBtt" prefHeight="42.0" prefWidth="46.0" style="-fx-background-color: #8656cb; -fx-background-radius: 100; -fx-border-color: black; -fx-border-radius: 100;">
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Imagen/threeDots.png" />
+                     </image>
+                     <effect>
+                        <ColorAdjust brightness="-1.0" contrast="-1.0" hue="-1.0" saturation="1.0" />
+                     </effect>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="deleteBtt" layoutX="167.0" layoutY="228.0" mnemonicParsing="false" onAction="#onDeleteAction" prefHeight="40.0" prefWidth="149.0" style="-fx-background-color: #8656cb; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="SETTINGS">
+               <font>
+                  <Font name="DejaVu Sans Bold" size="17.0" />
+               </font>
+            </Button>
+            <Label layoutX="199.0" layoutY="14.0" style="-fx-text-fill: black;" text="Product Name">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailTxt" alignment="CENTER_RIGHT" layoutX="81.0" layoutY="42.0" prefHeight="27.0" prefWidth="235.0" promptText="Product Name" style="-fx-background-color: #bca5fa; -fx-border-color: black; -fx-border-radius: 5; -fx-background-radius: 5;" />
+            <Label layoutX="210.0" layoutY="81.0" style="-fx-text-fill: black;" text="Product Price">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailTxt1" alignment="CENTER_RIGHT" layoutX="81.0" layoutY="109.0" prefHeight="27.0" prefWidth="235.0" promptText="Product Price" style="-fx-background-color: #bca5fa; -fx-border-color: black; -fx-border-radius: 5; -fx-background-radius: 5;" />
+            <Label layoutX="26.0" layoutY="152.0" style="-fx-text-fill: black;" text="Product &#10;Category">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="comboBox" layoutX="124.0" layoutY="155.0" prefHeight="50.0" prefWidth="150.0" promptText="CATEGORY" style="-fx-background-color: #781ddd; -fx-border-color: #000; -fx-border-width: 1;" />
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
