--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/CubeShop.fxml
@@ -73,15 +73,6 @@
                           <Image url="@Imagen/cube.png" />
                       </image>
                   </ImageView>
-            <Button fx:id="shopCartBtt" layoutX="476.0" layoutY="10.0" mnemonicParsing="false" onAction="#onShopCartAction" prefHeight="42.0" prefWidth="90.0" style="-fx-background-color: #1a1822; -fx-border-color: #cc87e0; -fx-border-width: 3; -fx-border-radius: 5; -fx-background-radius: 10;">
-               <graphic>
-                  <ImageView fitHeight="35.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Imagen/shopCart.jpg" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
             <Button fx:id="yourProductBtt" layoutX="201.0" layoutY="14.0" mnemonicParsing="false" onAction="#onYourProductAction" prefHeight="42.0" prefWidth="124.0" style="-fx-background-color: #781ddd; -fx-background-radius: 20; -fx-border-color: #000; -fx-border-radius: 20; -fx-text-fill: #000;" text="Your Products">
                <font>
                   <Font size="15.0" />
@@ -110,9 +101,9 @@
                   <DropShadow />
                </effect>
             </TableView>
-            <Pane fx:id="settingMenu" layoutX="11.0" layoutY="60.0" prefHeight="127.0" prefWidth="276.0" style="-fx-background-color: #781ddd; -fx-background-radius: 24; -fx-border-color: #000; -fx-border-radius: 24;">
+            <Pane fx:id="settingMenu" layoutX="11.0" layoutY="60.0" prefHeight="178.0" prefWidth="276.0" style="-fx-background-color: #781ddd; -fx-background-radius: 24; -fx-border-color: #000; -fx-border-radius: 24;">
                <children>
-                  <Button fx:id="closeSeBtt" layoutX="13.0" layoutY="74.0" mnemonicParsing="false" onAction="#onCloseSettingAction" prefHeight="31.0" prefWidth="251.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="CLOSE">
+                  <Button fx:id="closeSeBtt" layoutX="13.0" layoutY="125.0" mnemonicParsing="false" onAction="#onCloseSettingAction" prefHeight="31.0" prefWidth="251.0" style="-fx-background-color: #cc87e0; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="CLOSE">
                      <font>
                         <Font name="DejaVu Sans Bold" size="17.0" />
                      </font>
@@ -122,7 +113,12 @@
                         <Font name="DejaVu Sans Bold" size="17.0" />
                      </font>
                   </Button>
-                  <Line endX="100.0" layoutX="138.0" layoutY="62.0" startX="-100.0" stroke="#262626" strokeWidth="2.0" />
+                  <Line endX="100.0" layoutX="138.0" layoutY="113.0" startX="-100.0" stroke="#262626" strokeWidth="2.0" />
+                  <Button fx:id="signOutBtt" layoutX="13.0" layoutY="62.0" mnemonicParsing="false" onAction="#onSignOutAction" prefHeight="31.0" prefWidth="251.0" style="-fx-background-color: #8656cb; -fx-background-radius: 100; -fx-border-color: #000; -fx-border-radius: 100; -fx-text-fill: #000;" text="SIGN OUT">
+                     <font>
+                        <Font name="DejaVu Sans Bold" size="17.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
               </children>
