añadir la imagen de crossIcon y añadirlo a la imagen del boton para cerrar el panel

--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/MyProduct.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/MyProduct.fxml
@@ -147,7 +147,7 @@
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Imagen/threeDots.png" />
+                        <Image url="@Imagen/crossIcon.png" />
                      </image>
                      <effect>
                         <ColorAdjust brightness="-1.0" contrast="-1.0" hue="-1.0" saturation="1.0" />
